# ROS-Pacages-Use

./: README.md
Lidar-PointClouds/: README.md  Ros1_IntelRealSense_setup.sh  lidar_test.py  pcd2bin_as_kitti.py  requirements.txt
Lidar-PointClouds/pcd_create/: CMakeLists.txt  package.xml  run.sh
Lidar-PointClouds/pcd_create/scripts/: bag2depth.py  depth2pcd.py
Lidar-PointClouds/pcd_create/src/: save_pcd.cpp  vccs.cpp
Lidar-PointClouds/pcl_execution/: CMakeLists.txt  package.xml
Lidar-PointClouds/pcl_execution/data/: downsampled.pcd
Lidar-PointClouds/pcl_execution/include/: cloud_common.h  pcd_saver.h
Lidar-PointClouds/pcl_execution/launch/: clustering.launch  downsampling.launch  filtering.launch  loading.launch  planar_segmentation.launch
Lidar-PointClouds/pcl_execution/src/: cloud_clusterer.cpp  cloud_downsampler.cpp  cloud_filter.cpp  cloud_loader.cpp  cloud_planar_segmenter.cpp  pcd2ply.cpp  pcl_viewer.cpp  voxel_grid.cpp
Lidar-PointClouds/roscam_capture/launch/: usb_cam.launch
basics/: CMakeLists.txt  package.xml  run.sh
basics/launch/: chat.launch  cpp_twist.launch  service.launch  srv_service.launch
basics/scripts/: listener.py  service_client.py  service_server.py  talker.py  velocity_client.py  velocity_server.py
